# OSS-practice2

./: .gitignore  README.md
src/: README.md  pyproject.toml
src/role_assignment/: __init__.py  __main__.py  main.py
src/role_assignment/lessons/: __init__.py  lesson01_baseline.py  lesson02_teacher_role.py  lesson03_reviewer_role.py  lesson04_planner_role.py  lesson05_tone_control.py  lesson06_format_control.py  lesson07_messages_teacher.py  lesson08_messages_reviewer.py  lesson09_same_prompt_compare.py  lesson10_audience_role.py  lesson11_license_advisor.py  lesson12_quiz_maker_role.py  lesson13_debate_roles.py  lesson14_rubric_grader.py  lesson15_mini_workflow.py
src/role_assignment/my_lessons/: lesson01_baseline.py  lesson02_teacher_role.py  lesson03_reviewer_role.py  lesson04_planner_role.py  lesson05_tone_control.py  lesson06_format_control.py  lesson07_messages_teacher.py  lesson08_messages_reviewer.py  lesson09_same_prompt_compare.py  lesson10_audience_role.py  lesson11_strategy_pattern.py  lesson12_factory_pattern.py  lesson13_debate_roles.py  lesson14_rubric_grader.py  lesson15_mini_workflow.py
